Opened 14 years ago
Closed 14 years ago
#1702 closed defect (fixed)
Transparency information gets lost when converting from gray8a to rgba
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | swscale |
| Version: | git-master | Keywords: | gray8a alpha |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
(Second part of ticket #769)
When converting from gray8a to rgba, the resulting picture is opaque.
$ ffmpeg -s 32x32 -pix_fmt gray8a -i gray8a.yuv -pix_fmt rgba out.png
ffmpeg version N-44015-g5e363bb Copyright (c) 2000-2012 the FFmpeg developers
built on Aug 30 2012 10:41:45 with gcc 4.5.3 (GCC)
configuration: --cc=/usr/local/gcc-4.5.3/bin/gcc
libavutil 51. 70.100 / 51. 70.100
libavcodec 54. 54.100 / 54. 54.100
libavformat 54. 25.104 / 54. 25.104
libavdevice 54. 2.100 / 54. 2.100
libavfilter 3. 14.100 / 3. 14.100
libswscale 2. 1.101 / 2. 1.101
libswresample 0. 15.100 / 0. 15.100
[rawvideo @ 0x1480400] Estimating duration from bitrate, this may be inaccurate
Input #0, rawvideo, from 'gray8a.yuv':
Duration: N/A, start: 0.000000, bitrate: N/A
Stream #0:0: Video: rawvideo (Y2[0][8] / 0x8003259), gray8a, 32x32, 25 tbr, 25 tbn, 25 tbc
Output #0, image2, to 'out.png':
Metadata:
encoder : Lavf54.25.104
Stream #0:0: Video: png, rgba, 32x32, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
Stream #0:0 -> #0:0 (rawvideo -> png)
Press [q] to stop, [?] for help
Truncating packet of size 2048 to 1
frame= 1 fps=0.0 q=0.0 Lsize= 0kB time=00:00:00.04 bitrate= 0.0kbits/s
video:0kB audio:0kB subtitle:0 global headers:0kB muxing overhead -100.000000%
Attachments (1)
Change History (2)
by , 14 years ago
| Attachment: | gray8a.yuv added |
|---|
comment:1 by , 14 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.


