swscale: fix usePal()

Fixes Ticket1702

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>